# swaptop

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  skills-lock.json  spec.md
.cargo/: config.toml
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  rust-clippy.yml
docs/: devices.md  processes-screen.md
docs/superpowers/: arch_problem.md
docs/superpowers/plans/: 2026-04-11-overview-gauge-fix.md  2026-04-11-phase4-devices.md  2026-04-11-processes-performance.md  2026-04-11-processes-table.md  2026-04-11-quality-improvement.md  2026-04-11-statusbar-refactor.md  2026-04-11-ui-design-system.md  2026-04-11-ui-horizontal-margin.md  2026-04-11-ui-inner-section-gap.md  2026-04-11-ui-vertical-spacing.md  2026-04-13-phase5-create-swap.md  2026-04-14-phase6-ux-improvements.md  2026-04-18-module-reorganization.md  2026-04-18-swap-glob-discovery.md  2026-04-24-bridge-responsiveness.md  2026-04-24-pure-input-platform-bridge.md  2026-04-24-refactor-app-rs.md  2026-04-25-process-detail-modal.md
docs/superpowers/specs/: 2026-04-11-overview-gauge-fix-design.md  2026-04-11-phase4-devices-design.md  (+12 more)
src/: actions.rs  app.rs  collector.rs  create_swap.rs  input.rs  main.rs  platform_bridge.rs  tui.rs
src/app/: create_swap.rs  devices.rs  mod.rs  processes.rs  snapshot.rs
src/platform/: bsd.rs  factory.rs  linux.rs  macos.rs  mod.rs  proc_reader.rs  swap_discovery.rs  types.rs  windows.rs
src/platform/linux/: mod.rs  (+2 more)
src/ui/: create_swap.rs  design.rs  devices.rs  mod.rs  overview.rs  process_detail.rs  processes.rs  statusbar.rs
