[package]
name = "swaptop"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui     = "0.29"
crossterm   = { version = "0.28", features = ["event-stream"] }
tokio       = { version = "1", features = ["full"] }
tokio-util  = "0.7"
futures     = "0.3"
sysinfo     = "0.32"
nix         = { version = "0.29", features = ["process", "signal", "mount"] }
color-eyre  = "0.6"
human_bytes = "0.4"
glob        = "0.3"
