[package]
name = "swaptop"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui     = "0.30.0"
crossterm   = { version = "0.29.0", features = ["event-stream"] }
tokio       = { version = "1.51.1", features = ["full"] }
tokio-util  = "0.7.18"
futures     = "0.3.32"
sysinfo     = "0.38.4"
nix         = { version = "0.31.2", features = ["process", "signal", "mount"] }
color-eyre  = "0.6.5"
human_bytes = "0.4.3"
glob        = "0.3.3"
